<resources>
    <string name="app_name">i-instagram</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_register"> Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up_button">Create a New Account</string>
    <string name="what_story">Tell me what\'s happening!</string>
    <string name="shot">TAKE PICTURE</string>
    <string name="img">image</string>
    <string name="post">POST</string>
    <string name="sign_up">Sign up</string>
    <string name="new_user">NEW USER?</string>
    <string name="log_out">LOG OUT</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="image_for_post">Image for post</string>
    <string name="description">description</string>
</resources>
